@@ -131,6 +131,7 @@ S3method(ar.yw, mts)
 S3method(as.data.frame, aovproj)
 S3method(as.data.frame, ftable)
 S3method(as.data.frame, logLik)
+S3method(as.dendrogram, dendrogram)
 S3method(as.dendrogram, hclust)
 S3method(as.dist, default)
 S3method(as.hclust, dendrogram)
